# takehome

./: .dockerignore  .gitignore  CMakeLists.txt  DESIGN.md  Dockerfile  EXERCISE.md  README.md
.devcontainer/: devcontainer.json
include/: OrderBook.hpp
old-submission/include/: Constants.hpp  Type.hpp  main.hpp
old-submission/tests/: PerformanceSuite.cpp  StateSuite.cpp
reports/: report.html  report.xml
src/: OrderBook.cpp
submission/: CMakeLists.txt  DESIGN.md  README.txt  integration_test_scenario.txt
submission/include/: CSVParser.hpp  Constants.hpp  Order.hpp  OrderBook.hpp  OrderRegistry.hpp  OutputHandler.hpp  Precision.hpp  ThreadSafeQueue.hpp  TradingApp.hpp  TradingEngine.hpp  Type.hpp  Types.hpp  UDPServer.hpp
submission/src/: CSVParser.cpp  OrderBook.cpp  OrderRegistry.cpp  TradingApp.cpp  TradingEngine.cpp  UDPServer.cpp  main.cpp
submission/tests/: CSVParserTestSuite.cpp  FirewallSuite.cpp  KrakenFileParamTest.cpp  KrakenIntegrationTest.cpp  KrakenPerformanceTest.cpp  MatchingSuite.cpp  OrderBookTest.cpp  OrderBookTestSuite.cpp  OrderLifecycleSuite.cpp  PerformanceSuite.cpp  PrecisionSuite.cpp  PrecisionTestSuite.cpp  StateSuite.cpp  TradingAppE2ESuite.cpp
submission/tests/data/10/: in.csv
submission/tests/data/12/: out.csv
submission/tests/data/14/: in.csv  out.csv
submission/tests/data/16/: in.csv  out.csv
submission/tests/data/2/: in.csv
submission/tests/data/4/: in.csv  out.csv
submission/tests/data/6/: in.csv  out.csv
submission/tests/data/8/: in.csv  out.csv
test/: report.xml  run_tests.sh
test/1/: in.csv  out.csv
test/10/: in.csv  out.csv
test/12/: in.csv  out.csv
test/14/: in.csv  out.csv
test/15/: in.csv
test/16/: in.csv  out.csv
test/2/: in.csv  out.csv
test/3/: in.csv  out.csv
test/4/: in.csv  out.csv
test/5/: in.csv  out.csv
test/6/: in.csv  out.csv
test/8/: in.csv  out.csv
tests/: PrecisionSuite.cpp
